--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,7 @@ output: github_document
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
+  collapse = TRUE,
   fig.path = "man/figures/README-"
 )
 ```
@@ -52,10 +53,10 @@ landscape_classified <- classify_habitats(raster = landscape, classes = 5)
 
 There are two possibilities to randomize the environmental data, both described in Harms et al. (2001). The first shifts the habitat map in all 4 cardinal directions around a torus. The second one assigns the habitat values to an empty map using a random walk algorithm. Both functions return a list with randomized rasters and the observed one. For more information on the methods, please click [here](https://r-spatialecology.github.io/shar/articles/background.html).
 
-```{r habitat_random}
+```{r habitat_random, eval = FALSE}
 torus_trans <- translate_raster(raster = landscape_classified, verbose = FALSE)
 
-random_walk <- randomize_raster(raster = landscape_classified, n_random = 19, verbose = FALSE)
+random_walk <- randomize_raster(raster = landscape_classified, n_random = 39, verbose = FALSE)
 ```
 
 ```{r plot_habitat-random, fig.width = 5.5, fig.height = 4, fig.align = "center"}
@@ -66,20 +67,20 @@ plot_randomized_raster(torus_trans, n = 3, col = col)
 
 To randomize the point pattern, either use the Gamma test described by Plotkin et al. (2000) or pattern reconstruction (Tscheschel & Stoyan 2006). 
 
-```{r pattern-random}
-gamma_test <- fit_point_process(pattern = species_a, process = "cluster", n_random = 19, verbose = FALSE)
+```{r pattern-random, eval = FALSE}
+gamma_test <- fit_point_process(pattern = species_a, process = "cluster", n_random = 39, verbose = FALSE)
 
-reconstruct <- reconstruct_pattern(pattern = species_b, max_runs = 500, n_random = 19, verbose = FALSE) # takes some time
+reconstruction <- reconstruct_pattern(pattern = species_b, n_random = 39, verbose = FALSE) # takes some time
 ```
 
 Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
 ```{r plot-random_pattern, fig.width = 5.5, fig.height = 4, fig.align = "center"}
-plot_randomized_pattern(reconstruct, verbose = FALSE, ask = FALSE)
+plot_randomized_pattern(reconstruction, verbose = FALSE, ask = FALSE)
 ```
 
 ```{r calculate-energy}
-calculate_energy(reconstruct, verbose = FALSE)
+calculate_energy(reconstruction, verbose = FALSE)
 ```
 
 The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
@@ -87,7 +88,7 @@ The data was created that `species_a` has a negative association to habitat 4 an
 ```{r results}
 results_habitat_association(pattern = species_a, raster = torus_trans)
 
-results_habitat_association(pattern = reconstruct, raster = landscape_classified)
+results_habitat_association(pattern = reconstruction, raster = landscape_classified)
 ```
 
 ## References 
