--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -32,62 +32,50 @@ The core of **shar** are functions to to simulate null model data by randomizing
 All functions are designed for discrete habitat classes. Following, in case only continuous data is available, this has to be classified to discrete classes. `classify_habitats` provides several ways to classify the data such as the Fisher-Jenks algorithm (Fisher 1958, Jenks & Caspall 1971)
 
 ```{r classify_habitats}
-
 landscape_discrete <- classify_habitats(raster = landscape, classes = 5)
-
 ```
 
 ## Randomize environmental data
 There are two functions to randomize the environmental data: `translate_raster()` and `randomize_raster()`. The first function is a torus translation of the raster, shifting the habitat map in all four cardinal directions. This is only possible for rectangular observation areas and results in `n_random <- (raster::nrow(landscape) + 1) * (raster::ncol(landscape) + 1)  - 4` randomized rasters. The other function randomizes the environmental data using a random-walk algorithm. Here, the number of randomized rasters can be specified using the `n_random` argument.
 
-```{r randomize_raster, message = FALSE}
+```{r randomize_raster, eval = FALSE}
+torus_trans <- translate_raster(raster = landscape_discrete)
 
-landscape_torus <- translate_raster(raster = landscape_discrete)
-
-landscape_random <- randomize_raster(raster = landscape_discrete, n_random = 19)
-
+random_walk <- randomize_raster(raster = landscape_discrete, n_random = 39)
 ```
 
 ## Randomize location data
 To randomize the location data (i.e. the point pattern) either `fit_point_process()` or `reconstruct_pattern()` are available. The first fits either a Poisson process or a cluster process to the data. The difference to solutions from the `spatstat` package is that the number of points is always identical. The second functions reconstructs the spatial characteristics of the data using pattern reconstruction (Tscheschel & Stoyan 2006). This is advantageous for point patterns not describable by simple point process models. For both function, the number of patterns can be specified by the `n_random` argument. 
 
-```{r randomize_pp, message = FALSE, warning = FALSE}
+```{r randomize_pp, eval = FALSE}
+gamma_test <- fit_point_process(pattern = species_a, n_random = 39, process = "cluster")
 
-fitted <- fit_point_process(pattern = species_a, n_random = 19, process = "cluster")
-
-reconstructed <- reconstruct_pattern(pattern = species_a, max_runs = 500, n_random = 19) # takes some time
-
+reconstruction <- reconstruct_pattern(pattern = species_a, n_random = 39) # takes some time
 ``` 
 
 ## Analyse results 
 The most important function to analyse results is `results_habitat_association()`. This function compares the observed data to the null model data and by that is able to show significant species-habitat associations. The functions work for both, randomized environmental data or randomized location data. 
 
-``` {r results}
+```{r results}
+results_habitat_association(pattern = species_a, raster = random_walk)
 
-results_habitat_association(pattern = species_a, raster = landscape_random)
-
-results_habitat_association(pattern = reconstructed, raster = landscape_discrete)
-
+results_habitat_association(pattern = reconstruction, raster = landscape_discrete)
 ```
 
 There is also the possibility to visualize the randomized data using `plot_randomized_raster()` or `plot_randomized_pattern()`. 
 
 ```{r plotting, eval = FALSE}
+plot_randomized_raster(random_walk)
 
-plot_randomized_raster(landscape_random)
-
-plot_randomized_pattern(reconstructed)
-
+plot_randomized_pattern(reconstruction)
 ```
 
 For the randomized point pattern data, it is also possible to show the "difference" in terms of the energy (Tscheschel & Stoyan 2006) between the patterns.
 
 ```{r energy, message = FALSE}
+calculate_energy(pattern = gamma_test, return_mean = TRUE)
 
-calculate_energy(pattern = fitted, return_mean = TRUE)
-
-calculate_energy(pattern = reconstructed, return_mean = TRUE)
-
+calculate_energy(pattern = reconstruction, return_mean = TRUE)
 ```
 
 ### References 
