--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -50,7 +50,7 @@ To randomize the location data (i.e. the point pattern) either `fit_point_proces
 ```{r randomize_pp, eval = FALSE}
 gamma_test <- fit_point_process(pattern = species_a, n_random = 39, process = "cluster")
 
-reconstruction <- reconstruct_pattern(pattern = species_a, n_random = 39) # takes some time
+reconstruction <- reconstruct_pattern_homo(pattern = species_a, n_random = 39) # takes some time
 ``` 
 
 ## Analyse results 
