--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ library(shar)
 library(raster)
 ```
 
-**shar** comes with build-in example data sets. `species_a` and `species_b` are examplary location of species, e.g. trees, as `ppp`-objects from the `spatstat` package. `landscape` contains examplary continious environmental data. However, all methods depend on discrete data. Therefore we need to classify the data first. 
+**shar** comes with build-in example data sets. `species_a` and `species_b` are exemplary location of species, e.g. trees, as `ppp`-objects from the `spatstat` package. `landscape` contains examplary continuous environmental data. However, all methods depend on discrete data. Therefore we need to classify the data first. 
 
 ```{r environmental-data}
 landscape_classified <- classify_habitats(raster = landscape, classes = 5)
@@ -73,7 +73,7 @@ gamma_test <- fit_point_process(pattern = species_a, process = "cluster", n_rand
 reconstruction <- reconstruct_pattern_cluster(pattern = species_b, n_random = 39, verbose = FALSE) # takes some time
 ```
 
-Of coures, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
+Of course, there are several utility functions. For example, you can plot a randomized pattern or calculate the differences between the observed pattern and the randomized patterns (using summary functions). 
 
 ```{r plot-random_pattern, fig.width = 5.5, fig.height = 4, fig.align = "center"}
 plot_randomized_pattern(reconstruction, verbose = FALSE, ask = FALSE)
@@ -83,7 +83,7 @@ plot_randomized_pattern(reconstruction, verbose = FALSE, ask = FALSE)
 calculate_energy(reconstruction, verbose = FALSE)
 ```
 
-The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a posititive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
+The data was created that `species_a` has a negative association to habitat 4 and `species_b` has a positive association to habitat 5. At one point a positive association to one habitat leads consequently to a negative association to another habitat (and vice versa). All this can be seen in the results.
 
 ```{r results}
 results_habitat_association(pattern = species_a, raster = torus_trans)
