--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-# shar <img src="man/figures/logo.png" align="right" width="150" />
+<img src="man/figures/logo.png" align="right" width="150" />
 
 # shar
 
