:pencil: Update paper.md

--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,26 @@
+
+@article{Comita2007,
+  title = {Developmental changes in habitat associations of tropical trees},
+  author = {Comita, L.S. and Condit, R. and Hubbell, S.P.},
+  year = {2007},
+  journal = {Journal of Ecology},
+  volume = {95},
+  number = {3},
+  pages = {482--492},
+  doi = {10.1111/j.1365-2745.2007.01229.x}
+}
+
+@article{Garzon-Lopez2014,
+  title = {Effects of sampling scale on patterns of habitat association in tropical trees},
+  author = {{Garzon-Lopez}, C.X. and Jansen, P.A. and Bohlman, S.A. and Ordonez, A. and Olff, H.},
+  year = {2014},
+  journal = {Journal of Vegetation Science},
+  volume = {25},
+  number = {2},
+  pages = {349--362},
+  doi = {10.1111/jvs.12090}
+}
+
 @article{Harms2001,
   title = {Habitat associations of trees and shrubs in a 50-ha neotropical forest plot},
   author = {Harms, K.E. and Condit, R. and Hubbell, S.P. and Foster, R.B.},
@@ -7,6 +30,18 @@
   number = {6},
   pages = {947--959},
   doi = {10.1111/j.1365-2745.2001.00615.x}
+}
+
+@incollection{Tilman1993,
+  title = {The maintenance of species richness in plant communities},
+  booktitle = {Species Diversity in Ecological Communities},
+  author = {Tilman, D. and Pacala, S.W.},
+  editor = {Ricklefs, R.E. and Schluter, D.},
+  year = {1993},
+  pages = {13--25},
+  publisher = {University of Chicago Press},
+  address = {Chicago},
+  pmid = {1346}
 }
 
 
