:pencil: Edit intro

--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,12 @@
 
+@book{Baddeley2015,
+  title = {Spatial point patterns: Methodology and applications with R},
+  author = {Baddeley, A. and Rubak, E. and Turner, R.},
+  year = {2015},
+  publisher = {Chapman and Hall/CRC Press},
+  address = {London}
+}
+
 @article{Comita2007,
   title = {Developmental changes in habitat associations of tropical trees},
   author = {Comita, L.S. and Condit, R. and Hubbell, S.P.},
@@ -8,6 +16,28 @@
   number = {3},
   pages = {482--492},
   doi = {10.1111/j.1365-2745.2007.01229.x}
+}
+
+@article{Du2017,
+  title = {Spatial distribution of tree species in evergreen-deciduous broadleaf karst forests in southwest China},
+  author = {Du, H. and Hu, F. and Zeng, F. and Wang, K. and Peng, W. and Zhang, H. and Zeng, Z. and Zhang, F. and Song, T.},
+  year = {2017},
+  journal = {Scientific Reports},
+  volume = {7},
+  number = {1},
+  pages = {1--9},
+  doi = {10.1038/s41598-017-15789-5}
+}
+
+@article{Furniss2017,
+  title = {Reconciling niches and neutrality in a subalpine temperate forest},
+  author = {Furniss, T.J. and Larson, A.J. and Lutz, J.A.},
+  year = {2017},
+  journal = {Ecosphere},
+  volume = {8},
+  number = {6},
+  pages = {e01847},
+  doi = {10.1002/ecs2.1847}
 }
 
 @article{Garzon-Lopez2014,
@@ -21,6 +51,17 @@
   doi = {10.1111/jvs.12090}
 }
 
+@article{Guo2016,
+  title = {Topographic species\textendash habitat associations of tree species in a heterogeneous tropical karst seasonal rain forest, China},
+  author = {Guo, Y. and Wang, B. and Mallik, A.U. and Huang, F. and Xiang, W. and Ding, T. and Wen, S. and Lu, S. and Li, D. and He, Y. and Li, X.},
+  year = {2016},
+  journal = {Journal of Plant Ecology},
+  volume = {10},
+  number = {3},
+  pages = {450--460},
+  doi = {10.1093/jpe/rtw057}
+}
+
 @article{Harms2001,
   title = {Habitat associations of trees and shrubs in a 50-ha neotropical forest plot},
   author = {Harms, K.E. and Condit, R. and Hubbell, S.P. and Foster, R.B.},
@@ -30,6 +71,34 @@
   number = {6},
   pages = {947--959},
   doi = {10.1111/j.1365-2745.2001.00615.x}
+}
+
+@misc{Hijmans2019,
+  title = {raster: Geographic data analysis and modeling. R package version 2.9-5. {$<$}{{https://cran.r-project.org/package=raster$>$}}},
+  author = {Hijmans, R.J.},
+  year = {2019}
+}
+
+@article{John2007,
+  title = {Soil nutrients influence spatial distributions of tropical tree species},
+  author = {John, R. and Dalling, J.W. and Harms, K.E. and Yavitt, J.B. and Stallard, R.F. and Mirabello, M. and Hubbell, S.P. and Valencia, R. and Navarrete, H. and Vallejo, M. and Foster, R.B.},
+  year = {2007},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
+  volume = {104},
+  number = {3},
+  pages = {864--869},
+  doi = {10.1073/pnas.0604666104}
+}
+
+@article{Plotkin2000,
+  title = {Species-area curves, spatial aggregation, and habitat specialization in tropical forests},
+  author = {Plotkin, J.B. and Potts, M.D. and Leslie, N. and Manokaran, N. and LaFrankie, J.V. and Ashton, P.S.},
+  year = {2000},
+  journal = {Journal of Theoretical Biology},
+  volume = {207},
+  number = {1},
+  pages = {81--99},
+  doi = {10.1006/jtbi.2000.2158}
 }
 
 @incollection{Tilman1993,
@@ -44,4 +113,32 @@
   pmid = {1346}
 }
 
+@article{Velazquez2016,
+  title = {An evaluation of the state of spatial point pattern analysis in ecology},
+  author = {Vel{\'a}zquez, E. and Mart{\'i}nez, I. and Getzin, S. and Moloney, K.A. and Wiegand, T.},
+  year = {2016},
+  journal = {Ecography},
+  volume = {39},
+  pages = {1--14},
+  doi = {10.1111/ecog.01579}
+}
 
+@book{Wiegand2014,
+  title = {Handbook of spatial point-pattern analysis in ecology},
+  author = {Wiegand, T. and Moloney, K.A.},
+  year = {2014},
+  publisher = {Chapman and Hall/CRC Press},
+  address = {Boca Raton},
+  isbn = {978-1-4200-8254-8}
+}
+
+@article{Yang2016,
+  title = {Detangling the effects of environmental filtering and dispersal limitation on aggregated distributions of tree and shrub species: Life stage matters},
+  author = {Yang, Q.-S. and Shen, G.-C. and Liu, H.-M. and Wang, Z.-H. and Ma, Z.-P. and Fang, X.-F. and Zhang, J. and Wang, X.-H.},
+  year = {2016},
+  journal = {PLoS ONE},
+  volume = {11},
+  number = {5},
+  pages = {1--16},
+  doi = {10.1371/journal.pone.0156326}
+}
