:pencil: Update paper

--- a/paper.bib
+++ b/paper.bib
@@ -90,6 +90,17 @@
   doi = {10.1073/pnas.0604666104}
 }
 
+@article{Kirkpatrick1983,
+  title = {Optimization by simulated annealing},
+  author = {Kirkpatrick, S. and Gelatt, C.D.Jr. and Vecchi, M.P.},
+  year = {1983},
+  journal = {Science},
+  volume = {220},
+  number = {4598},
+  pages = {671--680},
+  doi = {10.1126/science.220.4598.671}
+}
+
 @article{Plotkin2000,
   title = {Species-area curves, spatial aggregation, and habitat specialization in tropical forests},
   author = {Plotkin, J.B. and Potts, M.D. and Leslie, N. and Manokaran, N. and LaFrankie, J.V. and Ashton, P.S.},
